# nr-epd-ventilation-index

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE.md  README.md  bcgovpubcode.yml  main.py  pyproject.toml
data/: current_ventilation_index_weights.csv  example_forecast.grib2
reports/: FLCN39_CWVR_2025-01-16.txt  FLCN39_CWVR_2025-01-17.txt  FLCN39_CWVR_2025-01-18.txt  FLCN39_CWVR_2025-01-19.txt  FLCN39_CWVR_2025-01-20.txt  FLCN39_CWVR_2025-01-21.txt  FLCN39_CWVR_2025-01-22.txt  FLCN39_CWVR_2025-01-23.txt  FLCN39_CWVR_2025-01-24.txt  FLCN39_CWVR_2025-01-26.txt  FLCN39_CWVR_2025-01-27.txt  FLCN39_CWVR_2025-01-28.txt  FLCN39_CWVR_2025-01-29.txt  FLCN39_CWVR_2025-01-30.txt  FLCN39_CWVR_2025-01-31.txt  FLCN39_CWVR_2025-02-01.txt  FLCN39_CWVR_2025-02-02.txt  FLCN39_CWVR_2025-02-03.txt  FLCN39_CWVR_2025-02-04.txt  FLCN39_CWVR_2025-02-05.txt  FLCN39_CWVR_2025-02-06.txt  FLCN39_CWVR_2025-02-07.txt  FLCN39_CWVR_2025-02-08.txt  FLCN39_CWVR_2025-02-09.txt  FLCN39_CWVR_2025-02-10.txt  FLCN39_CWVR_2025-02-11.txt  FLCN39_CWVR_2025-02-12.txt  FLCN39_CWVR_2025-02-13.txt  FLCN39_CWVR_2025-02-14.txt  FLCN39_CWVR_2025-02-15.txt  FLCN39_CWVR_2025-02-16.txt  FLCN39_CWVR_2025-02-17.txt  FLCN39_CWVR_2025-02-18.txt  FLCN39_CWVR_2025-02-19.txt  FLCN39_CWVR_2025-02-20.txt  FLCN39_CWVR_2025-02-21.txt  FLCN39_CWVR_2025-02-22.txt  FLCN39_CWVR_2025-02-23.txt  FLCN39_CWVR_2025-02-24.txt  FLCN39_CWVR_2025-02-25.txt  (+333 more)
scripts/: process_data.py  update_zones.py
tests/: test_data_fetch.py  test_forecast.py  test_grouping.py  test_output.py  test_point_data.py  test_reducer.py  test_weights.py  (+1 more)
(+12 files in other folders)
