[project]
name = "nr-epd-ventilation-index"
version = "0.1.0"
description = "BC ventilation index bulletin generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cfgrib>=0.9.14.1",
    "geopandas>=1.0.1",
    "xarray>=2024.7.0",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=8.3.3",
]
